--- a/backend/package.json
+++ b/backend/package.json
@@ -8,5 +8,10 @@
     "express": "^4.16.4",
     "knex": "^0.16.3",
     "nodemon": "^1.18.10"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "jest --watch --verbose"
   }
 }
